// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Book should match its empty snapshot 1`] = `
<div
  className="book"
>
  <div
    className="book-top"
  >
    <div
      className="book-cover"
      style={
        Object {
          "backgroundImage": "url(\\"undefined\\")",
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <div
      className="book-shelf-changer"
    >
      <select>
        <option
          disabled={true}
          value="none"
        >
          Move to...
        </option>
        <option
          value="currentlyReading"
        >
          Currently Reading
        </option>
        <option
          value="wantToRead"
        >
          Want to Read
        </option>
        <option
          value="read"
        >
          Read
        </option>
        <option
          value="none"
        >
          None
        </option>
      </select>
    </div>
  </div>
  <div
    className="book-title"
  />
  <div
    className="book-authors"
  />
</div>
`;

exports[`Component: Book should render the props 1`] = `
<div
  className="book"
>
  <div
    className="book-top"
  >
    <div
      className="book-cover"
      style={
        Object {
          "backgroundImage": "url(\\"test-url\\")",
          "height": "200",
          "width": "100",
        }
      }
    />
    <div
      className="book-shelf-changer"
    >
      <select>
        <option
          disabled={true}
          value="none"
        >
          Move to...
        </option>
        <option
          value="currentlyReading"
        >
          Currently Reading
        </option>
        <option
          value="wantToRead"
        >
          Want to Read
        </option>
        <option
          value="read"
        >
          Read
        </option>
        <option
          value="none"
        >
          None
        </option>
      </select>
    </div>
  </div>
  <div
    className="book-title"
  >
    Test Name
  </div>
  <div
    className="book-authors"
  >
    test authors
  </div>
</div>
`;
